--- a/BioMath.tex
+++ b/BioMath.tex
@@ -570,6 +570,8 @@ The function in the previous example at the reference point $(x_0, y_0)=(1,2)$ w
 \end{equation}
 
 \FloatBarrier
+%\section{Complex numbers}
+%\FloatBarrier
 
 \section{Some properties of logarithms}
 \label{logprop}
